update before holiday

--- a/html/login.html
+++ b/html/login.html
@@ -4,23 +4,28 @@
 		<link rel="stylesheet" href="../css/logreg.css">
 		<title>Login</title>
 	</head>
-	<body>
-		<div>
-			<div class="form_container">
-				<div class="form_subtitle">
-					Login to Open Notes
-				</div>
-				<label for="username" class="form_label">Username</label>
-				<input type="text" placeholder="boom" class="form_input" id="inputUsername"/>
-				<br/>
-				<label for="password" class="form_label">Password</label>
-				<input type="password" id="inputPassword" class="form_input"/>
-				<label class="wrong_msg" id="wrong_user">invalid username or password</label>
-
-				<input type="button" onclick="" id="form_button" value="login"/>
-				<label id="new_user">New? Create account here</label>
+	<body onload="(document, location, true)">
+		<div class="form_container">
+			<div class="form_subtitle">
+				Login to Open Notes
 			</div>
-		</div>
+			<div>
+				<form method="POST">
+					<label for="username" class="form_label">Username</label>
+					<br/>
+					<input type="text" name="username" placeholder="boom" class="form_input" id="inputUsername"></input>
+					<br/>
+					<br/>
+					<label for="password" class="form_label">Password</label>
+					<br/>
+					<input type="password" name="password" id="inputPassword" class="form_input"></input>
+					<label class="wrong_msg" id="wrong_user">invalid username or password</label>
 
+					<input type="submit" id="form_button" value="login"/>
+				</form>
+			</div>
+			<label id="new_user">New? Create account here</label>
+		</div>
 	</body>
+	<script src="../js/login.js"></script>
 </html>
