--- a/html/register.html
+++ b/html/register.html
@@ -25,7 +25,7 @@
 			<label class="wrong_msg" id="wrong_repass">password not matched</label>
 			
 			<input type="button" onclick="" id="form_button" value="login"/>
-			<label id="new_user">New? Create account here</label>
+			<label id="new_user">Already have account? Login here</label>
 		</div>
 
 	</body>
