login langsung tembak ke php, ga pake AJAX

--- a/html/login.html
+++ b/html/login.html
@@ -10,7 +10,7 @@
 				Login to Open Notes
 			</div>
 			<div>
-				<form method="POST">
+				<form method="POST" action="../php/login.php">
 					<label for="username" class="form_label">Username</label>
 					<br/>
 					<input type="text" name="username" placeholder="boom" class="form_input" id="inputUsername"></input>
