--- a/html/home.html
+++ b/html/home.html
@@ -4,6 +4,7 @@
 	<link href="../bootstrap-4.3.1-dist/css/bootstrap.css" media="all" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/topbar.css">
 	<link rel="stylesheet" type="text/css" href="../css/home-content.css">
+	<link rel="stylesheet" type="text/css" href="../css/pagination.css">
 	<title>Open Notes</title>
 </head>
 <body>
