--- a/html/login.html
+++ b/html/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="../css/logreg.css">
+		<link rel="stylesheet" href="../css/login-register.css">
 		<title>Login</title>
 	</head>
 	<body onload="(document, location, true)">
