--- a/html/edit.html
+++ b/html/edit.html
@@ -24,5 +24,16 @@
 			</li>
 		</ul>
 	</nav>
+	<div class="container">
+		<div class="return-home">
+			<input type="button" value="<"/>
+		</div>
+		<div class="edit-area">
+			<form method="POST">
+				<input type="text" class="edit-title" name="title_input" placeholder="Title"/>
+				<input type="text" class="edit-content" name="content_input" placeholder="Content">
+			</form>
+		</div>
+	</div>
 </body>
 </html>
