--- a/html/home.html
+++ b/html/home.html
@@ -26,7 +26,9 @@
 				<input type="text" name="searchString" id="search-input" placeholder="find your notes here"/>
 			</li>
 			<li class="nav-item">
-				<input type="button" class="logout orange" value="Logout"/>
+				<form method="POST" action="../php/logout.php">
+				<input type="submit" class="logout orange" value="Logout"/>
+				</form>
 			</li>
 		</ul>
 	</nav>
